perf(aeron): remove per-command state materialization